Cloud storage is now functional! Still some work to do on functionality and UI before ready to release.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,6 +110,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:background="@color/usaflagrevisedblue"
-        android:gravity="center" />
+        android:gravity="center"
+        android:textSize="16sp" />
 
 </RelativeLayout>
