--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -32,7 +32,8 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/none"
             android:id="@+id/accountTextView"
-            android:layout_gravity="center_vertical" />
+            android:layout_gravity="center_vertical"
+            android:textSize="14sp" />
 
     </LinearLayout>
 
@@ -99,6 +100,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:background="@color/usaflagrevisedblue"
-        android:gravity="center" />
+        android:gravity="center"
+        android:textSize="16sp" />
 
 </RelativeLayout>
