--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,16 +2,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.caniborrowyourphone.usa.MainActivity" >
 
     <TextView
         android:id="@+id/headerTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/loggedInAsTextView"
+        android:layout_alignParentTop="false"
         android:layout_centerHorizontal="true"
-        android:text="@string/header_text_view" />
+        android:text="@string/header_text_view"
+        android:layout_marginTop="16dp" />
 
     <TextView
         android:id="@+id/numDaysTextView"
@@ -27,10 +29,11 @@
         android:id="@+id/currentlyInTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:text="@string/currently_in"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_below="@+id/mainLinearLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp" />
 
     <TextView
         android:id="@+id/locationTextView"
@@ -39,7 +42,8 @@
         android:layout_below="@+id/currentlyInTextView"
         android:layout_centerHorizontal="true"
         android:text="@string/no_mans_land"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/usaflagred" />
 
     <LinearLayout
         android:id="@+id/mainLinearLayout"
@@ -85,7 +89,7 @@
             android:text="@string/settings"
             android:clickable="true"
             android:layout_marginRight="10dp"
-            android:background="@color/usaflagred"
+            android:background="@drawable/button_selector"
             android:textColor="@color/white" />
 
         <Button
@@ -96,7 +100,7 @@
             android:text="@string/calendar"
             android:clickable="true"
             android:layout_marginLeft="10dp"
-            android:background="@color/usaflagred"
+            android:background="@drawable/button_selector"
             android:textColor="@color/white" />
 
         </LinearLayout>
@@ -107,10 +111,11 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text=""
         android:id="@+id/loggedInAsTextView"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentBottom="false"
         android:layout_centerHorizontal="true"
         android:background="@color/usaflagrevisedblue"
         android:gravity="center"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
