--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,45 +3,14 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.caniborrowyourphone.usa.SettingsActivity" >
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/linearLayout1"
-        android:gravity="fill_vertical">
-
-        <TextView
-            android:layout_width="0px"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/account"
-            android:id="@+id/textView"
-            android:layout_gravity="center_vertical" />
-
-        <TextView
-            android:layout_width="0px"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/none"
-            android:id="@+id/accountTextView"
-            android:layout_gravity="center_vertical"
-            android:textSize="14sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout1"
+        android:layout_below="@+id/loggedInAsTextView"
         android:gravity="fill_vertical|center_horizontal"
         android:id="@+id/linearLayout2"
         android:layout_marginBottom="40dp"
@@ -54,7 +23,7 @@
             android:id="@+id/loginButton"
             android:scaleType="centerInside"
             android:layout_marginRight="10dp"
-            android:background="@color/usaflagred"
+            android:background="@drawable/button_selector"
             android:textColor="@color/white" />
 
         <Button
@@ -65,19 +34,19 @@
             android:scaleType="centerInside"
             android:layout_marginLeft="10dp"
             android:textColor="@color/white"
-            android:background="@color/usaflagred" />
+            android:background="@drawable/button_selector" />
     </LinearLayout>
 
     <Button
         android:layout_width="144dp"
         android:layout_height="72dp"
-        android:layout_below="@+id/linearLayout1"
+        android:layout_below="@+id/loggedInAsTextView"
         android:text="@string/logout"
         android:id="@+id/logoutButton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:visibility="invisible"
-        android:background="@color/usaflagred"
+        android:background="@drawable/button_selector"
         android:textColor="@color/white" />
 
     <Switch
@@ -90,14 +59,15 @@
         android:layout_centerHorizontal="true"
         android:textSize="22sp"
         android:checked="false"
-        android:layout_below="@+id/linearLayout2" />
+        android:layout_below="@+id/linearLayout2"
+        android:thumb="@color/usaflagrevisedblue" />
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="48dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text=""
         android:id="@+id/loggedInAsTextView"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:background="@color/usaflagrevisedblue"
         android:gravity="center"
