--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,7 @@
         android:layout_below="@+id/loggedInAsTextView"
         android:layout_alignParentTop="false"
         android:layout_centerHorizontal="true"
-        android:text="@string/header_text_view"
-        android:layout_marginTop="16dp" />
+        android:text="@string/header_text_view" />
 
     <TextView
         android:id="@+id/numDaysTextView"
