--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,37 +6,6 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.caniborrowyourphone.usa.SettingsActivity" >
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/loggedInAsTextView"
-        android:gravity="fill_vertical|center_horizontal"
-        android:id="@+id/linearLayout2"
-        android:layout_marginBottom="40dp"
-        android:layout_marginTop="20dp">
-
-        <Button
-            android:layout_width="144dp"
-            android:layout_height="72dp"
-            android:text="@string/login"
-            android:id="@+id/loginButton"
-            android:scaleType="centerInside"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/button_selector"
-            android:textColor="@color/white" />
-
-        <Button
-            android:layout_width="144dp"
-            android:layout_height="72dp"
-            android:text="@string/create_account"
-            android:id="@+id/createAccountButton"
-            android:scaleType="centerInside"
-            android:layout_marginLeft="10dp"
-            android:textColor="@color/white"
-            android:background="@drawable/button_selector" />
-    </LinearLayout>
-
     <Button
         android:layout_width="144dp"
         android:layout_height="72dp"
@@ -45,21 +14,19 @@
         android:id="@+id/logoutButton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:visibility="invisible"
+        android:layout_marginBottom="40dp"
         android:background="@drawable/button_selector"
         android:textColor="@color/white" />
 
     <Switch
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
         android:text="@string/minimize_data_usage"
         android:id="@+id/minimizeDataUsageSwitch"
         android:layout_centerHorizontal="true"
         android:textSize="18sp"
         android:checked="false"
-        android:layout_below="@+id/linearLayout2"
+        android:layout_below="@+id/logoutButton"
         android:thumb="@color/usaflagrevisedblue" />
     <TextView
         android:layout_width="fill_parent"
