--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,28 +6,122 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.caniborrowyourphone.usa.SettingsActivity" >
 
-    <Button
-        android:layout_width="144dp"
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
         android:layout_height="72dp"
         android:layout_below="@+id/loggedInAsTextView"
-        android:text="@string/logout"
-        android:id="@+id/logoutButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:layout_marginBottom="40dp"
-        android:background="@drawable/button_selector"
-        android:textColor="@color/white" />
+        android:gravity="center_horizontal">
 
-    <Switch
-        android:layout_width="wrap_content"
+        <Button
+            android:layout_width="144dp"
+            android:layout_height="fill_parent"
+            android:text="@string/logout"
+            android:id="@+id/logoutButton"
+            android:background="@drawable/button_selector"
+            android:textColor="@color/white"
+            android:layout_marginRight="10dp" />
+
+        <Button
+            android:layout_width="144dp"
+            android:layout_height="fill_parent"
+            android:text="@string/change_password"
+            android:id="@+id/changePasswordButton"
+            android:background="@drawable/button_selector"
+            android:textColor="@color/white"
+            android:layout_marginLeft="10dp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/minimize_data_usage"
-        android:id="@+id/minimizeDataUsageSwitch"
+        android:layout_below="@+id/linearLayout1"
         android:layout_centerHorizontal="true"
-        android:textSize="18sp"
-        android:checked="false"
-        android:layout_below="@+id/logoutButton"
-        android:thumb="@color/usaflagrevisedblue" />
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/use_mobile_data"
+            android:id="@+id/textView3"
+            android:layout_weight="2"
+            android:gravity="center_vertical" />
+
+        <Switch
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.3"
+            android:id="@+id/usingMobileDataSwitch"
+            android:textSize="18sp"
+            android:checked="true"
+            android:thumb="@color/usaflagrevisedblue" />
+
+        <TextView
+            android:layout_width="0px"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.7"
+            android:gravity="center"
+            android:text="@string/info_"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="@color/usaflagrevisedblue"
+            android:clickable="true"
+            android:textIsSelectable="false"
+            android:id="@+id/usingMobileDataInfoTextView" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linearLayout2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/use_location"
+            android:id="@+id/textView4"
+            android:layout_weight="2"
+            android:gravity="center_vertical" />
+
+        <Switch
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.3"
+            android:id="@+id/usingLocationSwitch"
+            android:textSize="18sp"
+            android:checked="true"
+            android:thumb="@color/usaflagrevisedblue" />
+
+        <TextView
+            android:layout_width="0px"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.7"
+            android:gravity="center"
+            android:text="@string/info_"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="@color/usaflagrevisedblue"
+            android:clickable="true"
+            android:textIsSelectable="false"
+            android:id="@+id/usingLocationInfoTextView" />
+
+    </LinearLayout>
+
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="48dp"
@@ -39,5 +133,19 @@
         android:background="@color/usaflagrevisedblue"
         android:gravity="center"
         android:textSize="16sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/about_"
+        android:id="@+id/aboutTextView"
+        android:textStyle="bold"
+        android:textColor="@color/usaflagrevisedblue"
+        android:clickable="true"
+        android:textIsSelectable="false"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="8dp"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </RelativeLayout>
