--- a/app/src/main/res/layout/dialog_getstarted.xml
+++ b/app/src/main/res/layout/dialog_getstarted.xml
@@ -11,7 +11,8 @@
         android:id="@+id/textView"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:layout_marginTop="10dp" />
 
     <EditText
         android:id="@+id/emailDialogEditText"
