--- a/app/src/main/res/layout/dialog_login.xml
+++ b/app/src/main/res/layout/dialog_login.xml
@@ -26,6 +26,7 @@
     <Button android:layout_width="144dp"
         android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="16dp"
         android:id="@+id/loginDialogButton"
         android:text="@string/login"
         android:background="@drawable/button_selector"
@@ -35,7 +36,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp">
 
         <TextView
@@ -54,6 +54,30 @@
             android:clickable="true"
             android:textIsSelectable="false"
             android:id="@+id/createAccountTextView" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="16dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="12dp"
+            android:text="@string/forgot_password"
+            android:textSize="16sp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/click_here"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="@color/usaflagrevisedblue"
+            android:clickable="true"
+            android:textIsSelectable="false"
+            android:id="@+id/forgotPasswordTextView" />
     </LinearLayout>
 
 </LinearLayout>
