--- a/app/src/main/res/drawable/button_selector.xml
+++ b/app/src/main/res/drawable/button_selector.xml
@@ -10,8 +10,8 @@
             <item android:bottom="2dp" android:left="2dp">
                 <shape>
                     <gradient android:angle="270"
-                        android:endColor="@color/darkred" android:startColor="#ff0000" />
-                    <stroke android:width="1dp" android:color="#ff0000" />
+                        android:endColor="@color/darkred" android:startColor="@color/red2" />
+                    <stroke android:width="1dp" android:color="@color/red2" />
                     <corners android:radius="4dp" />
                     <padding android:bottom="10dp" android:left="10dp"
                         android:right="10dp" android:top="10dp" />
