--- a/app/src/main/res/layout/actionbar.xml
+++ b/app/src/main/res/layout/actionbar.xml
@@ -5,10 +5,16 @@
 
     <ImageButton
         android:id="@+id/backButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:background="@drawable/leftarrow64_lightgrey1_transparent" />
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:background="@drawable/leftarrow64_lightgrey1_transparent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/backTextView"
+        android:layout_alignBottom="@+id/backTextView"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp" />
 
     <TextView
         android:id="@+id/backTextView"
@@ -16,9 +22,10 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/backButton"
+        android:layout_toEndOf="@+id/backButton"
         android:text="@string/back"
         android:textColor="@color/white"
-        android:textSize="20sp" />
+        android:textSize="18sp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -32,7 +39,7 @@
         android:gravity="center"
         android:text="@string/title"
         android:textColor="@color/white"
-        android:textSize="20sp" />
+        android:textSize="24sp" />
 
     </LinearLayout>
 
