--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,17 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.caniborrowyourphone.usa.MainActivity" >
+    tools:context="com.caniborrowyourphone.usa.MainActivity">
 
     <TextView
         android:id="@+id/headerTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/loggedInAsTextView"
-        android:layout_alignParentTop="false"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="@string/header_text_view" />
+        android:text="@string/header_text_view"
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/numDaysTextView"
@@ -50,31 +49,58 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/numDaysTextView"
-        android:layout_marginTop="40dp"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:layout_marginTop="32dp">
 
-        <Button
-            android:id="@+id/enteringCanadaButton"
-            android:layout_width="144dp"
-            android:layout_height="72dp"
-            android:text="@string/entering_canada"
-            android:scaleType="centerInside"
-            android:layout_marginRight="10dp" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp">
 
-        <Button
-            android:id="@+id/enteringUSAButton"
-            android:layout_width="144dp"
-            android:layout_height="72dp"
-            android:text="@string/entering_usa"
-            android:scaleType="centerInside"
-            android:layout_marginLeft="10dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/leaving_usa"
+                android:id="@+id/leavingUSATextView"
+                android:layout_above="@+id/mainLinearLayout"
+                android:layout_gravity="center_horizontal"
+                android:textSize="20sp" />
 
+            <Button
+                android:id="@+id/enteringCanadaButton"
+                android:layout_width="144dp"
+                android:layout_height="72dp"
+                android:scaleType="centerInside" />
         </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/entering_usa"
+                android:id="@+id/textView5"
+                android:layout_gravity="center_horizontal"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/enteringUSAButton"
+                android:layout_width="144dp"
+                android:layout_height="72dp"
+                android:scaleType="centerInside" />
+        </LinearLayout>
+
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_below="@+id/locationTextView"
         android:layout_marginTop="34dp"
         android:gravity="center_horizontal">
@@ -82,24 +108,26 @@
         <Button
             android:id="@+id/settingsButton"
             android:layout_width="144dp"
-            android:layout_height="48dp"
+            android:layout_height="fill_parent"
             android:onClick="viewSettings"
             android:text="@string/settings"
             android:clickable="true"
             android:layout_marginRight="10dp"
             android:background="@drawable/button_selector"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/viewCalendarButton"
             android:layout_width="144dp"
-            android:layout_height="48dp"
+            android:layout_height="fill_parent"
             android:onClick="viewCalendar"
             android:text="@string/calendar"
             android:clickable="true"
             android:layout_marginLeft="10dp"
             android:background="@drawable/button_selector"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:textSize="20sp" />
 
         </LinearLayout>
 
@@ -109,11 +137,11 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text=""
         android:id="@+id/loggedInAsTextView"
-        android:layout_alignParentBottom="false"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:background="@color/usaflagrevisedblue"
         android:gravity="center"
         android:textSize="16sp"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="false" />
 
 </RelativeLayout>
