--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,18 +3,17 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.caniborrowyourphone.usa.SettingsActivity" >
+    tools:context="com.caniborrowyourphone.usa.SettingsActivity"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="72dp"
-        android:layout_below="@+id/loggedInAsTextView"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp"
-        android:gravity="center_horizontal">
+        android:layout_above="@+id/aboutTextView"
+        android:gravity="center_horizontal"
+        android:layout_marginBottom="40dp">
 
         <Button
             android:layout_width="144dp"
@@ -40,9 +39,10 @@
         android:id="@+id/linearLayout2"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout1"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="32dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp">
 
@@ -68,7 +68,7 @@
             android:layout_width="0px"
             android:layout_height="fill_parent"
             android:layout_weight="0.7"
-            android:gravity="center"
+            android:gravity="center_vertical|right"
             android:text="@string/info_"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -85,7 +85,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/linearLayout2"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="32dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp">
 
@@ -111,7 +111,7 @@
             android:layout_width="0px"
             android:layout_height="fill_parent"
             android:layout_weight="0.7"
-            android:gravity="center"
+            android:gravity="center_vertical|right"
             android:text="@string/info_"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -128,11 +128,12 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text=""
         android:id="@+id/loggedInAsTextView"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentTop="false"
         android:layout_centerHorizontal="true"
         android:background="@color/usaflagrevisedblue"
         android:gravity="center"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:layout_alignParentBottom="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -143,9 +144,9 @@
         android:textColor="@color/usaflagrevisedblue"
         android:clickable="true"
         android:textIsSelectable="false"
-        android:layout_alignParentBottom="true"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_above="@+id/loggedInAsTextView"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="8dp"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:layout_marginBottom="16dp" />
 
 </RelativeLayout>
