--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,11 +15,15 @@
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-       <item name="android:actionBarStyle">@style/MyActionBarStyle</item>
+       <!-- <item name="android:actionBarStyle">@style/MyActionBarStyle</item> -->
     </style>
 
     <style name="MyActionBarStyle" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
         <item name="android:displayOptions"></item>
+    </style>
+
+    <style name="MySpinnerLook" parent="android:TextAppearance.Widget.TextView.SpinnerItem">
+        <item name="android:textSize">22sp</item>
     </style>
 
 </resources>
